Add basic nav design for mobile site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <script src="main.js" defer></script>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Menu</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div class="top-bar">
+
+    </div>
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
