Finalize mobile layout for homepage

--- a/index.html
+++ b/index.html
@@ -20,13 +20,35 @@
   </header>
 
   <main>
-    <div class="top-bar">
-
+    <div class="content">
+      <h1>Silver Specialty Cafe</h1>
+      <img src="images/pancakes.jpg" alt="pancakes with fruit and whipped cream" class="pancake-img">
+      <div class="about">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed leo vitae ante 
+          porta euismod. Sed fermentum mi sem, eget dictum mi volutpat eget. Aliquam et accumsan 
+          sapien. Quisque euismod mi nec sollicitudin auctor. Pellentesque in fringilla tellus. 
+          Sed a nulla sit amet mi gravida placerat id in magna. 
+        </p>
+        <p>- Salvador Rhodes</p>
+      </div>
+      <img src="images/woman_with_coffee.jpg" alt="woman drinking coffee and surfing laptop" class="coffee-drinker-img">
+      <div class="hours">
+        <h2>Hours</h2>
+        <p><strong>Sunday:</strong> 8am - 8pm</p>
+        <p><strong>Monday:</strong> 6am - 6pm</p>
+        <p><strong>Tuesday:</strong> 6am - 6pm</p>
+        <p><strong>Wednesday:</strong> 6am - 6pm</p>
+        <p><strong>Thursday:</strong> 6am - 10pm</p>
+        <p><strong>Friday:</strong> 6am - 10pm</p>
+        <p><strong>Saturday:</strong> 8am - 10pm</p>
+      </div>
+      <p class="location">Located at: 123 Main St, New Haze, NY 101000</p>
     </div>
   </main>
 
   <footer>
-
+    <p>Hold text</p>
   </footer>
 </body>
 </html>
