Make tabs responsive, add in menu render start
Make the 3 top tabs responsive so that the site knows when
they are clicked. Render the home page when its tab is clicked.

Remove all content when menu tab is clicked, and begin writing
a module to render menu content.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
   <header>
     <nav>
       <ul>
-        <li><a>Home</a></li>
-        <li><a>Menu</a></li>
-        <li><a>Contact</a></li>
+        <li><a class="home-tab">Home</a></li>
+        <li><a class="menu-tab">Menu</a></li>
+        <li><a class="contact-tab">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <div class="content">
-
+    <div class="content"></div>
   </main>
 
   <footer>
